tests/query_errors/window_mutate_meta/error.txt
Error: 
    1 | define window w from tumbling
    2 | state
    3 |   null
    4 | script
    5 |   let $snot = 42;
      |       ^^^^^^^^^^ Can not assign to `$` here
    6 | end;